# geode-icon-kit-filter-and-sort

./: .editorconfig  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml
data/: author-json.json  category-data  check-valid-buckets-for-authors-and-sort.py  check-valid-buckets-for-categories-and-sort.py  generate.ps1
include/: constants.hpp  iconkit.hpp  logic.hpp  moreicons.hpp
include/api/: api.hpp  base.hpp  easy-event.hpp  events.hpp  good-dispatch-event.hpp
include/hooks/: GJGarageLayer.hpp  GameManager.hpp  PurchaseItemPopup.hpp
include/popups/: AuthorFilterPopup.hpp  CategoryFilterPopup.hpp  DisplayOptionsPopup.hpp  FilterAndSortPopup.hpp  FilterPopup.hpp  SortPopup.hpp
include/utils/: BoundCCMenu.hpp  LinkedCCMenu.hpp  SortIconButtonSprite.hpp
src/: debug.cpp  iconkit.cpp  logic.cpp  main.cpp
src/api/: api.cpp
src/constants/: authors.cpp  categories.cpp  other.cpp
src/hooks/: GJGarageLayer.cpp  GameManager.cpp  PurchaseItemPopup.cpp
src/popups/: AuthorFilterPopup.cpp  CategoryFilterPopup.cpp  DisplayOptionsPopup.cpp  FilterAndSortPopup.cpp  FilterPopup.cpp  SortPopup.cpp
src/utils/: BoundCCMenu.cpp  CCMenuItemTogglerSpoof.cpp  LinkedCCMenu.cpp  SortIconButtonSprite.cpp
